--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.12",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
     "react-dom": "19.1.0",
