--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
+    "mongoose": "^8.17.1",
     "motion": "^12.23.12",
     "next": "15.4.1",
     "next-themes": "^0.4.6",
