--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
     "class-variance-authority": "^0.7.1",
+    "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
@@ -46,6 +47,7 @@
     "motion": "^12.23.12",
     "next": "15.4.1",
     "next-auth": "^4.24.11",
+    "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
