--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "mongoose": "^8.17.1",
     "motion": "^12.23.12",
     "next": "15.4.1",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
     "react-dom": "19.1.0",
