--- a/package.json
+++ b/package.json
@@ -30,9 +30,16 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@tabler/icons-react": "^3.34.1",
     "@tanstack/react-table": "^8.21.3",
+    "@tiptap/extension-color": "^3.7.2",
+    "@tiptap/extension-font-family": "^3.7.2",
+    "@tiptap/extension-font-size": "^3.0.0-next.3",
+    "@tiptap/extension-highlight": "^3.7.2",
     "@tiptap/extension-image": "^3.3.0",
     "@tiptap/extension-placeholder": "^3.3.0",
+    "@tiptap/extension-table": "^3.7.2",
     "@tiptap/extension-text-align": "^3.3.0",
+    "@tiptap/extension-text-style": "^3.7.2",
+    "@tiptap/extensions": "^3.7.2",
     "@tiptap/pm": "^3.3.0",
     "@tiptap/react": "^3.3.0",
     "@tiptap/starter-kit": "^3.3.0",
