--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
+    "@next/third-parties": "^16.0.0",
     "@radix-ui/react-accordion": "^1.2.11",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
@@ -55,7 +56,7 @@
     "lucide-react": "^0.525.0",
     "mongoose": "^8.17.1",
     "motion": "^12.23.12",
-    "next": "15.4.1",
+    "next": "^16.0.0",
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
