--- a/package.json
+++ b/package.json
@@ -56,11 +56,12 @@
     "lucide-react": "^0.525.0",
     "mongoose": "^8.17.1",
     "motion": "^12.23.12",
-    "next": "^16.0.0",
+    "next": "^15.0.0",
     "next-auth": "^5.0.0-beta.29",
     "next-cloudinary": "^6.16.0",
     "next-themes": "^0.4.6",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^2.15.4",
     "slugify": "^1.6.6",
